src/test/resources/purescript_examples/passing/ConstraintInference.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PsiElement(identifier)('log')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('shout')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('log')
                PsiElement(whitespace)(' ')
          PSIdentInfixImpl(IdentInfix)
            PSQualifiedImpl(Qualified)
              PsiElement(operator)('<<<')
              PsiElement(whitespace)(' ')
          PSValueImpl(Value)
            PSPrefixValueImpl(PrefixValue)
              PSParensImpl(Parens)
                PsiElement(()('(')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSVarImpl(Var)
                      PSQualifiedImpl(Qualified)
                        PsiElement(identifier)('_')
                        PsiElement(whitespace)(' ')
                  PSIdentInfixImpl(IdentInfix)
                    PSQualifiedImpl(Qualified)
                      PsiElement(operator)('<>')
                      PsiElement(whitespace)(' ')
                  PSValueImpl(Value)
                    PSPrefixValueImpl(PrefixValue)
                      PSStringLiteralImpl(StringLiteral)
                        PsiElement(string)('"!"')
                PsiElement())(')')
                PsiElement(whitespace)(' ')
            PSIdentInfixImpl(IdentInfix)
              PSQualifiedImpl(Qualified)
                PsiElement(operator)('<<<')
                PsiElement(whitespace)(' ')
            PSValueImpl(Value)
              PSPrefixValueImpl(PrefixValue)
                PSVarImpl(Var)
                  PSQualifiedImpl(Qualified)
                    PsiElement(identifier)('show')
                    PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PsiElement(identifier)('shout')
                      PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Test"')
                    PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PsiElement(identifier)('log')
                      PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Done"')
                    PsiElement(whitespace)('\n')
